# todo_list

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start_app.sh
config/: app.db  base.py  dev.py
migrations/versions/: 3ebb705bd873_.py
project/: __init__.py  blueprints_registry.py
project/api/task/: __init__.py  controller.py  interface.py  model.py  schema.py  service.py
project/lib/: mailer.py  model_utils.py
